makes changes to screen class to get numbers to align correctly

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body,html{
       
     }
 
-    .button
+    .button1
     {
         border-radius: 15px;
         width:50px;
@@ -43,6 +43,16 @@ body,html{
         margin: 10px;
         background-color:blueviolet;
     }
+
+    .button2
+    {
+        border-radius: 15px;
+        width:50px;
+        height:50px;
+        margin: 10px;
+        background-color:blueviolet;
+    }
+
 
 
     .deletionbuttons
@@ -84,6 +94,13 @@ body,html{
         border-radius: 15px;
         margin-top: 15px;
         margin-left: 95px;
+
+        
+        display:flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        overflow-x: auto;
+        
 
     }
 
